:sparkles: Fix size align

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@
     scroll-behavior: smooth;
     overflow-x: hidden;
     -webkit-font-smoothing: antialiased;
+    @apply bg-navy;
   }
 
   body {
